--- a/index.html
+++ b/index.html
@@ -2,84 +2,53 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Vetted Analytics - Project Portal</title>
+<title>Vetted Analytics - MSDOT Portal</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
-  body { margin: 0; padding: 0; font-family: 'Helvetica Neue', Arial, sans-serif; background: #f4f4f4; overflow: hidden; }
+  body { margin: 0; padding: 0; font-family: sans-serif; background: #f4f4f4; overflow: hidden; }
   #mly-container { position: absolute; top: 0; bottom: 0; left: 0; width: 50%; background: #000; border-right: 2px solid #35af6d; }
   #map-container { position: absolute; top: 0; bottom: 0; right: 0; width: 50%; }
   #map { width: 100%; height: 100%; }
   iframe { width: 100%; height: 100%; border: none; }
-
-  .controls {
-    position: absolute; top: 15px; right: 15px; z-index: 10;
-    background: white; padding: 12px; border-radius: 8px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 180px;
-    display: flex; flex-direction: column; gap: 8px;
-  }
-  label { font-size: 10px; font-weight: bold; color: #666; text-transform: uppercase; }
-  input { padding: 6px; border: 1px solid #ccc; border-radius: 4px; font-size: 12px; }
+  .controls { position: absolute; top: 15px; right: 15px; z-index: 10; background: white; padding: 12px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 180px; display: flex; flex-direction: column; gap: 8px; }
   button { padding: 10px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
-  button:hover { background: #2d965d; }
 </style>
 </head>
 <body>
 
-<div id="mly-container">
-  <iframe id="mly-frame" src="https://www.mapillary.com/embed?style=photo&menu=false"></iframe>
-</div>
-
+<div id="mly-container"><iframe id="mly-frame" src="https://www.mapillary.com/embed?style=photo&menu=false"></iframe></div>
 <div id="map-container">
   <div class="controls">
-    <label>From Date</label>
-    <input type="date" id="date-from">
-    <label>To Date</label>
-    <input type="date" id="date-to">
     <button onclick="applyDateFilter()">Filter Road Runs</button>
   </div>
   <div id="map"></div>
 </div>
 
 <script>
-  // Pointing to your actual GitHub folder name
-  const clientID = "MSDOT"; 
-
   mapboxgl.accessToken = 'pk.eyJ1IjoianZldHRlcnMiLCJhIjoiY21sazFhdDg5MDV3dDNlcTI3aXlwejIwaSJ9.ecEavihruz0TZguVQvRiVg';
   const mlyToken = 'MLY|25724468457195152|d9c0ac6f4fbcd6ede3a3ba4e8332729b';
 
-  const map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/light-v11',
-    zoom: 6,
-    center: [-89.3985, 32.3547],
-    maxZoom: 17
+  const map = new mapboxgl.Map({ 
+    container: 'map', 
+    style: 'mapbox://styles/mapbox/light-v11', 
+    zoom: 6, 
+    center: [-89.3985, 32.3547] 
   });
 
-  const stringToColour = (str) => {
-    let hash = 0;
-    for (let i = 0; i < str.length; i++) { hash = str.charCodeAt(i) + ((hash << 5) - hash); }
-    let colour = '#';
-    for (let i = 0; i < 3; i++) {
-      let value = (hash >> (i * 8)) & 0xFF;
-      colour += ('00' + value.toString(16)).substr(-2);
-    }
-    return colour;
-  }
-
   map.on('load', () => {
-    // 1. MAPILLARY DATA
+    // 1. MAPILLARY SOURCE
     map.addSource('mapillary', {
       type: 'vector',
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
       maxzoom: 17
     });
 
-    // 2. DEBRIS POINTS (Red Dots)
+    // 2. DEBRIS POINTS (Top Layer)
     map.addSource('debris-points', {
       type: 'geojson',
-      data: `./${clientID}/Debris_Points.json`
+      data: './MSDOT/Debris_Points.json'
     });
 
     map.addLayer({
@@ -88,31 +57,23 @@
       source: 'debris-points',
       paint: {
         'circle-radius': 7,
-        'circle-color': '#e74c3c',
+        'circle-color': '#e74c3c', // Red points
         'circle-stroke-width': 2,
         'circle-stroke-color': '#fff'
       }
     });
 
-    // 3. COUNTY POLYGONS (Multi-Colored)
-    fetch(`./${clientID}/Mississippi_Counties.json`)
+    // 3. COUNTY POLYGONS
+    fetch('./MSDOT/Mississippi_Counties.json')
       .then(res => res.json())
       .then(data => {
-        data.features.forEach(f => {
-          f.properties.dynamicColor = stringToColour(f.properties.Name || "default");
-        });
-        map.addSource('client-data', { type: 'geojson', data: data });
-
+        map.addSource('counties', { type: 'geojson', data: data });
         map.addLayer({
           id: 'county-fills',
           type: 'fill',
-          source: 'client-data',
-          paint: {
-            'fill-color': ['get', 'dynamicColor'],
-            'fill-opacity': 0.15,
-            'fill-outline-color': 'rgba(0,0,0,0.1)'
-          }
-        }, 'debris-layer'); // Keeps debris dots on top
+          source: 'counties',
+          paint: { 'fill-color': '#35af6d', 'fill-opacity': 0.1, 'fill-outline-color': '#000' }
+        }, 'debris-layer'); // Ensures dots stay on top
 
         // 4. MAPILLARY INTERACTIVE LAYERS
         map.addLayer({
@@ -129,14 +90,14 @@
           source: 'mapillary',
           'source-layer': 'image',
           paint: { 
-            'circle-radius': ['interpolate', ['linear'], ['zoom'], 10, 1.5, 17, 8],
+            'circle-radius': ['interpolate', ['linear'], ['zoom'], 10, 2, 17, 8],
             'circle-color': '#35af6d', 
             'circle-stroke-width': 1, 
             'circle-stroke-color': '#fff' 
           }
         });
 
-        // 5. AUTO-ZOOM TO DATA
+        // Auto-zoom to data
         const bounds = new mapboxgl.LngLatBounds();
         data.features.forEach(f => {
           if (f.geometry && f.geometry.coordinates) {
@@ -148,16 +109,10 @@
       });
   });
 
-  function applyDateFilter() {
-    const fromTs = document.getElementById('date-from').value ? new Date(document.getElementById('date-from').value).getTime() : 0;
-    const toTs = document.getElementById('date-to').value ? new Date(document.getElementById('date-to').value).getTime() : Date.now();
-    const filter = ['all', ['>=', ['get', 'captured_at'], fromTs], ['<=', ['get', 'captured_at'], toTs]];
-    if (map.getLayer('mapillary-lines')) map.setFilter('mapillary-lines', filter);
-    if (map.getLayer('mapillary-points')) map.setFilter('mapillary-points', filter);
-  }
-
+  // INTERACTIVITY
   map.on('click', 'mapillary-points', (e) => {
-    document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${e.features[0].properties.id}&style=photo&menu=false`;
+    const imgID = e.features[0].properties.id;
+    document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${imgID}&style=photo&menu=false`;
   });
 
   map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
