--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Vetted Analytics - MSDOT Portal</title>
+<title>Vetted Analytics - Portal</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
@@ -12,7 +12,7 @@
   #map-container { position: absolute; top: 0; bottom: 0; right: 0; width: 50%; }
   #map { width: 100%; height: 100%; }
   iframe { width: 100%; height: 100%; border: none; }
-  .controls { position: absolute; top: 15px; right: 15px; z-index: 10; background: white; padding: 12px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 180px; display: flex; flex-direction: column; gap: 8px; }
+  .controls { position: absolute; top: 15px; right: 15px; z-index: 10; background: white; padding: 10px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
   button { padding: 10px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
 </style>
 </head>
@@ -20,9 +20,7 @@
 
 <div id="mly-container"><iframe id="mly-frame" src="https://www.mapillary.com/embed?style=photo&menu=false"></iframe></div>
 <div id="map-container">
-  <div class="controls">
-    <button onclick="applyDateFilter()">Filter Road Runs</button>
-  </div>
+  <div class="controls"><button onclick="applyFilter()">Filter Road Runs</button></div>
   <div id="map"></div>
 </div>
 
@@ -30,40 +28,71 @@
   mapboxgl.accessToken = 'pk.eyJ1IjoianZldHRlcnMiLCJhIjoiY21sazFhdDg5MDV3dDNlcTI3aXlwejIwaSJ9.ecEavihruz0TZguVQvRiVg';
   const mlyToken = 'MLY|25724468457195152|d9c0ac6f4fbcd6ede3a3ba4e8332729b';
 
-  const map = new mapboxgl.Map({ 
-    container: 'map', 
-    style: 'mapbox://styles/mapbox/light-v11', 
-    zoom: 6, 
-    center: [-89.3985, 32.3547] 
+  const map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/light-v11',
+    zoom: 6,
+    center: [-89.3985, 32.3547]
   });
 
   map.on('load', () => {
-    // 1. MAPILLARY SOURCE
+    // 1. MAPILLARY LAYERS
     map.addSource('mapillary', {
       type: 'vector',
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
       maxzoom: 17
     });
 
-    // 2. DEBRIS POINTS (Top Layer)
-    map.addSource('debris-points', {
-      type: 'geojson',
-      data: './MSDOT/Debris_Points.json'
+    map.addLayer({
+      id: 'mapillary-lines',
+      type: 'line',
+      source: 'mapillary',
+      'source-layer': 'sequence',
+      paint: { 'line-color': '#35af6d', 'line-width': 2, 'line-opacity': 0.5 }
     });
 
     map.addLayer({
-      id: 'debris-layer',
+      id: 'mapillary-points',
       type: 'circle',
-      source: 'debris-points',
+      source: 'mapillary',
+      'source-layer': 'image',
       paint: {
-        'circle-radius': 7,
-        'circle-color': '#e74c3c', // Red points
-        'circle-stroke-width': 2,
+        'circle-radius': ['interpolate', ['linear'], ['zoom'], 12, 2, 17, 6],
+        'circle-color': '#35af6d',
+        'circle-stroke-width': 1,
         'circle-stroke-color': '#fff'
       }
     });
 
-    // 3. COUNTY POLYGONS
+    // 2. DEBRIS POINTS - Transforming the null geometry
+    fetch('./MSDOT/Debris_Points.json')
+      .then(res => res.json())
+      .then(data => {
+        // Fix the null geometry by using the Latitude/Longitude from properties
+        data.features.forEach(f => {
+          if (f.properties.Longitude && f.properties.Latitude) {
+            f.geometry = {
+              type: 'Point',
+              coordinates: [parseFloat(f.properties.Longitude), parseFloat(f.properties.Latitude)]
+            };
+          }
+        });
+
+        map.addSource('debris', { type: 'geojson', data: data });
+        map.addLayer({
+          id: 'debris-layer',
+          type: 'circle',
+          source: 'debris',
+          paint: {
+            'circle-radius': 6,
+            'circle-color': '#e74c3c',
+            'circle-stroke-width': 1.5,
+            'circle-stroke-color': '#fff'
+          }
+        });
+      });
+
+    // 3. COUNTIES
     fetch('./MSDOT/Mississippi_Counties.json')
       .then(res => res.json())
       .then(data => {
@@ -72,52 +101,14 @@
           id: 'county-fills',
           type: 'fill',
           source: 'counties',
-          paint: { 'fill-color': '#35af6d', 'fill-opacity': 0.1, 'fill-outline-color': '#000' }
-        }, 'debris-layer'); // Ensures dots stay on top
-
-        // 4. MAPILLARY INTERACTIVE LAYERS
-        map.addLayer({
-          id: 'mapillary-lines',
-          type: 'line',
-          source: 'mapillary',
-          'source-layer': 'sequence',
-          paint: { 'line-color': '#35af6d', 'line-width': 2, 'line-opacity': 0.7 }
-        }, 'debris-layer');
-
-        map.addLayer({
-          id: 'mapillary-points',
-          type: 'circle',
-          source: 'mapillary',
-          'source-layer': 'image',
-          paint: { 
-            'circle-radius': ['interpolate', ['linear'], ['zoom'], 10, 2, 17, 8],
-            'circle-color': '#35af6d', 
-            'circle-stroke-width': 1, 
-            'circle-stroke-color': '#fff' 
-          }
-        });
-
-        // Auto-zoom to data
-        const bounds = new mapboxgl.LngLatBounds();
-        data.features.forEach(f => {
-          if (f.geometry && f.geometry.coordinates) {
-            const coords = f.geometry.type === 'Polygon' ? f.geometry.coordinates[0] : f.geometry.coordinates;
-            coords.forEach(c => bounds.extend(Array.isArray(c[0]) ? c[0] : c));
-          }
-        });
-        map.fitBounds(bounds, { padding: 40 });
+          paint: { 'fill-color': '#35af6d', 'fill-opacity': 0.05, 'fill-outline-color': '#000' }
+        }, 'mapillary-lines');
       });
   });
 
-  // INTERACTIVITY
   map.on('click', 'mapillary-points', (e) => {
-    const imgID = e.features[0].properties.id;
-    document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${imgID}&style=photo&menu=false`;
+    document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${e.features[0].properties.id}&style=photo&menu=false`;
   });
-
-  map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
-  map.on('mouseleave', 'mapillary-points', () => { map.getCanvas().style.cursor = ''; });
-  map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
 </script>
 </body>
 </html>
