--- a/index.html
+++ b/index.html
@@ -12,18 +12,10 @@
   #map-container { position: absolute; top: 0; bottom: 0; right: 0; width: 50%; }
   #map { width: 100%; height: 100%; }
   iframe { width: 100%; height: 100%; border: none; }
-
-  /* UI Controls */
-  .controls {
-    position: absolute; top: 15px; right: 15px; z-index: 10;
-    background: white; padding: 12px; border-radius: 8px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 180px;
-    display: flex; flex-direction: column; gap: 8px;
-  }
+  .controls { position: absolute; top: 15px; right: 15px; z-index: 10; background: white; padding: 12px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 180px; display: flex; flex-direction: column; gap: 8px; }
   label { font-size: 10px; font-weight: bold; color: #666; text-transform: uppercase; }
   input { padding: 6px; border: 1px solid #ccc; border-radius: 4px; font-size: 12px; }
   button { padding: 10px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
-  button:hover { background: #2d965d; }
 </style>
 </head>
 <body>
@@ -55,7 +47,6 @@
     maxZoom: 17
   });
 
-  // Generator for random county colors
   const stringToColour = (str) => {
     let hash = 0;
     for (let i = 0; i < str.length; i++) { hash = str.charCodeAt(i) + ((hash << 5) - hash); }
@@ -68,42 +59,7 @@
   }
 
   map.on('load', () => {
-    // 1. Mapillary Source
-    map.addSource('mapillary', {
-      type: 'vector',
-      tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
-      maxzoom: 17
-    });
-
-    // 2. Debris Points - Fixing the null geometry issue
-    fetch('./MSDOT/Debris_Points.json')
-      .then(res => res.json())
-      .then(data => {
-        // Manually build geometry from properties Latitude/Longitude
-        data.features.forEach(f => {
-          if (f.properties.Longitude && f.properties.Latitude) {
-            f.geometry = {
-              type: 'Point',
-              coordinates: [parseFloat(f.properties.Longitude), parseFloat(f.properties.Latitude)]
-            };
-          }
-        });
-
-        map.addSource('debris-points', { type: 'geojson', data: data });
-        map.addLayer({
-          id: 'debris-layer',
-          type: 'circle',
-          source: 'debris-points',
-          paint: {
-            'circle-radius': 7,
-            'circle-color': '#e74c3c', // Red points for debris
-            'circle-stroke-width': 2,
-            'circle-stroke-color': '#fff'
-          }
-        });
-      });
-
-    // 3. County Polygons - Restoring Colors & Transparency
+    // 1. ADD COUNTIES FIRST (The base layer)
     fetch('./MSDOT/Mississippi_Counties.json')
       .then(res => res.json())
       .then(data => {
@@ -118,19 +74,51 @@
           source: 'counties',
           paint: {
             'fill-color': ['get', 'dynamicColor'],
-            'fill-opacity': 0.15, // Reverted to 15% transparency
-            'fill-outline-color': 'rgba(0,0,0,0.1)'
+            'fill-opacity': 0.15,
+            'fill-outline-color': '#000'
           }
-        }, 'debris-layer'); // Ensures debris points stay on top
+        });
 
-        // 4. Mapillary Layers
+        // 2. ADD DEBRIS POINTS (Above counties)
+        fetch('./MSDOT/Debris_Points.json')
+          .then(res => res.json())
+          .then(pointData => {
+            pointData.features.forEach(f => {
+              if (f.properties.Longitude && f.properties.Latitude) {
+                f.geometry = {
+                  type: 'Point',
+                  coordinates: [parseFloat(f.properties.Longitude), parseFloat(f.properties.Latitude)]
+                };
+              }
+            });
+            map.addSource('debris-points', { type: 'geojson', data: pointData });
+            map.addLayer({
+              id: 'debris-layer',
+              type: 'circle',
+              source: 'debris-points',
+              paint: {
+                'circle-radius': 7,
+                'circle-color': '#e74c3c',
+                'circle-stroke-width': 2,
+                'circle-stroke-color': '#fff'
+              }
+            });
+          });
+
+        // 3. ADD MAPILLARY (Top layers)
+        map.addSource('mapillary', {
+          type: 'vector',
+          tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
+          maxzoom: 17
+        });
+
         map.addLayer({
           id: 'mapillary-lines',
           type: 'line',
           source: 'mapillary',
           'source-layer': 'sequence',
           paint: { 'line-color': '#35af6d', 'line-width': 2, 'line-opacity': 0.7 }
-        }, 'debris-layer');
+        });
 
         map.addLayer({
           id: 'mapillary-points',
@@ -145,7 +133,7 @@
           }
         });
 
-        // Zoom to MSDOT Data
+        // Auto-zoom to the counties
         const bounds = new mapboxgl.LngLatBounds();
         data.features.forEach(f => {
           if (f.geometry && f.geometry.coordinates) {
@@ -157,7 +145,6 @@
       });
   });
 
-  // Date Filter Logic
   function applyDateFilter() {
     const fromTs = document.getElementById('date-from').value ? new Date(document.getElementById('date-from').value).getTime() : 0;
     const toTs = document.getElementById('date-to').value ? new Date(document.getElementById('date-to').value).getTime() : Date.now();
@@ -166,7 +153,6 @@
     if (map.getLayer('mapillary-points')) map.setFilter('mapillary-points', filter);
   }
 
-  // Interactivity
   map.on('click', 'mapillary-points', (e) => {
     const imgId = e.features[0].properties.id;
     document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${imgId}&style=photo&menu=false`;
