--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   iframe { width: 100%; height: 100%; border: none; }
   .controls { position: absolute; top: 15px; right: 15px; z-index: 10; background: white; padding: 12px; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 180px; display: flex; flex-direction: column; gap: 8px; }
   label { font-size: 10px; font-weight: bold; color: #666; text-transform: uppercase; }
-  input { padding: 6px; border: 1px solid #ccc; border-radius: 4px; font-size: 12px; }
+  input, select { padding: 6px; border: 1px solid #ccc; border-radius: 4px; font-size: 12px; width: 100%; }
   button { padding: 10px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
+  button:hover { background: #2d965d; }
 </style>
 </head>
 <body>
@@ -26,6 +27,15 @@
     <label>From Date</label><input type="date" id="date-from">
     <label>To Date</label><input type="date" id="date-to">
     <button onclick="applyDateFilter()">Filter Road Runs</button>
+    <hr style="border:0; border-top:1px solid #eee; margin: 4px 0;">
+    <label>Debris Type</label>
+    <select id="debris-type-selector" onchange="applyDebrisFilter()">
+      <option value="All">All Types</option>
+      <option value="Hanger">Hanger</option>
+      <option value="Leaner">Leaner</option>
+      <option value="VEG">VEG</option>
+      <option value="C&D">C&D</option>
+    </select>
   </div>
   <div id="map"></div>
 </div>
@@ -51,7 +61,7 @@
   }
 
   map.on('load', () => {
-    // 1. ADD MAPILLARY INDEPENDENTLY
+    // 1. Mapillary (Independent Load)
     map.addSource('mapillary', {
       type: 'vector',
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
@@ -79,7 +89,7 @@
       }
     });
 
-    // 2. ADD MSDOT COUNTIES
+    // 2. MSDOT Counties
     fetch('./MSDOT/Mississippi_Counties.json')
       .then(res => res.json())
       .then(data => {
@@ -90,7 +100,7 @@
           type: 'fill',
           source: 'counties',
           paint: { 'fill-color': ['get', 'dynamicColor'], 'fill-opacity': 0.15, 'fill-outline-color': '#000' }
-        }, 'mapillary-lines'); // Puts polygons under Mapillary
+        }, 'mapillary-lines');
 
         const bounds = new mapboxgl.LngLatBounds();
         data.features.forEach(f => {
@@ -102,7 +112,7 @@
         map.fitBounds(bounds, { padding: 40 });
       });
 
-    // 3. ADD MSDOT DEBRIS POINTS (Top Layer)
+    // 3. MSDOT Debris Points
     fetch('./MSDOT/Debris_Points.json')
       .then(res => res.json())
       .then(pointData => {
@@ -129,12 +139,23 @@
       });
   });
 
+  // Date Filter logic
   function applyDateFilter() {
     const fromTs = document.getElementById('date-from').value ? new Date(document.getElementById('date-from').value).getTime() : 0;
     const toTs = document.getElementById('date-to').value ? new Date(document.getElementById('date-to').value).getTime() : Date.now();
     const filter = ['all', ['>=', ['get', 'captured_at'], fromTs], ['<=', ['get', 'captured_at'], toTs]];
     if (map.getLayer('mapillary-lines')) map.setFilter('mapillary-lines', filter);
     if (map.getLayer('mapillary-points')) map.setFilter('mapillary-points', filter);
+  }
+
+  // NEW: Debris Type Filter logic
+  function applyDebrisFilter() {
+    const selectedType = document.getElementById('debris-type-selector').value;
+    if (selectedType === 'All') {
+      map.setFilter('debris-layer', null);
+    } else {
+      map.setFilter('debris-layer', ['==', ['get', 'Debris Type'], selectedType]);
+    }
   }
 
   map.on('click', 'mapillary-points', (e) => {
