--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   #map { width: 100%; height: 100%; }
   iframe { width: 100%; height: 100%; border: none; }
 
-  /* UI Controls & Legend Panel */
   .controls {
     position: absolute; top: 15px; right: 15px; z-index: 10;
     background: white; padding: 12px; border-radius: 8px;
@@ -25,7 +24,6 @@
   button { padding: 10px; background: #35af6d; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
   button:hover { background: #2d965d; }
 
-  /* Legend Styling */
   .legend-container { margin-top: 5px; display: flex; flex-direction: column; gap: 4px; }
   .legend-item { display: flex; align-items: center; font-size: 11px; color: #444; font-weight: bold; }
   .legend-key { width: 12px; height: 12px; border-radius: 50%; margin-right: 8px; border: 1px solid #fff; }
@@ -42,9 +40,7 @@
     <label>From Date</label><input type="date" id="date-from" value="2026-02-03">
     <label>To Date</label><input type="date" id="date-to">
     <button onclick="applyDateFilter()">Filter Road Runs</button>
-    
     <hr style="border:0; border-top:1px solid #eee; margin: 4px 0;">
-    
     <label>Debris Type Filter</label>
     <select id="debris-type-selector" onchange="applyDebrisFilter()">
       <option value="All">All Types</option>
@@ -53,9 +49,7 @@
       <option value="VEG">VEG</option>
       <option value="C&D">C&D</option>
     </select>
-
     <hr style="border:0; border-top:1px solid #eee; margin: 4px 0;">
-
     <label>Legend</label>
     <div class="legend-container">
       <div class="legend-item"><div class="legend-key" style="background: #f1c40f;"></div>Hanger</div>
@@ -89,7 +83,7 @@
   }
 
   map.on('load', () => {
-    // 1. Mapillary (Independent Load)
+    // 1. Mapillary (Decoupled & Enhanced Zoom)
     map.addSource('mapillary', {
       type: 'vector',
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
@@ -109,11 +103,18 @@
       type: 'circle',
       source: 'mapillary',
       'source-layer': 'image',
+      // MODIFIED: Increased zoom range and base size for better visibility
       paint: { 
-        'circle-radius': ['interpolate', ['linear'], ['zoom'], 10, 1.5, 17, 8],
+        'circle-radius': [
+          'interpolate', ['linear'], ['zoom'], 
+          6, 1.5,   // Smallest visible size at state-level zoom
+          14, 4,    // Medium size at street level
+          17, 10    // Large size when fully zoomed in
+        ],
         'circle-color': '#35af6d', 
         'circle-stroke-width': 1, 
-        'circle-stroke-color': '#fff' 
+        'circle-stroke-color': '#fff',
+        'circle-opacity': ['interpolate', ['linear'], ['zoom'], 6, 0.5, 8, 1] // Fade in softly
       }
     });
 
@@ -166,7 +167,6 @@
         });
       });
 
-    // APPLY PRE-FILTER AUTOMATICALLY
     applyDateFilter();
   });
 
