--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   }
 
   map.on('load', () => {
-    // 1. Mapillary Tiles and Sequences
+    // 1. Mapillary Sequences and Points
     map.addSource('mapillary', {
       type: 'vector',
       tiles: [`https://tiles.mapillary.com/maps/vtp/mly1_public/2/{z}/{x}/{y}?access_token=${mlyToken}`],
@@ -186,7 +186,6 @@
     applyDateFilter();
   });
 
-  // Event Handlers for UI Interactivity
   map.on('click', 'mapillary-points', (e) => {
     currentImageKey = e.features[0].properties.id;
     document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${currentImageKey}&style=photo&menu=false`;
@@ -217,16 +216,26 @@
     map.setFilter('debris-layer', selectedType === 'All' ? null : ['==', ['get', 'Debris Type'], selectedType]);
   }
 
-  // Updated Download: Pulls flattened crop directly from image server
-  function downloadFlatImage() {
+  // FIX: Blob-based fetch to prevent "Site Cannot Be Reached" error
+  async function downloadFlatImage() {
     if (!currentImageKey) { alert("Select a point first."); return; }
-    const flatUrl = `https://images.mapillary.com/${currentImageKey}/thumb-2048.jpg`;
-    const link = document.createElement('a');
-    link.href = flatUrl;
-    link.download = `Flat_Debris_View_${currentImageKey}.jpg`;
-    document.body.appendChild(link);
-    link.click();
-    link.remove();
+    try {
+      const flatUrl = `https://images.mapillary.com/${currentImageKey}/thumb-2048.jpg`;
+      const response = await fetch(flatUrl);
+      const blob = await response.blob();
+      const blobUrl = window.URL.createObjectURL(blob);
+      
+      const a = document.createElement('a');
+      a.href = blobUrl;
+      a.download = `Flat_View_${currentImageKey}.jpg`;
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      window.URL.revokeObjectURL(blobUrl);
+    } catch (err) {
+      console.error("Download failed:", err);
+      alert("Unable to download image. The browser blocked the request.");
+    }
   }
 
   map.on('mouseenter', 'mapillary-points', () => { map.getCanvas().style.cursor = 'pointer'; });
