--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
   .legend-item { display: flex; align-items: center; font-size: 11px; color: #444; font-weight: bold; }
   .legend-key { width: 12px; height: 12px; border-radius: 50%; margin-right: 8px; border: 1px solid #fff; }
 
-  /* Style for the 360 viewer inside the popup */
   #pano-viewer { width: 100%; height: 200px; background: #eee; margin-top: 10px; }
 </style>
 </head>
@@ -78,6 +77,7 @@
       <div class="legend-item"><div class="legend-key" style="background: #e67e22;"></div>Leaner</div>
       <div class="legend-item"><div class="legend-key" style="background: #2ecc71;"></div>VEG</div>
       <div class="legend-item"><div class="legend-key" style="background: #9b59b6;"></div>C&D</div>
+      <div class="legend-item"><div class="legend-key" style="background: #e74c3c;"></div>Unknown</div>
     </div>
   </div>
   <div id="map"></div>
@@ -92,11 +92,12 @@
   const map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/light-v11',
-    zoom: 6,
-    center: [-89.3985, 32.3547],
+    zoom: 12,
+    center: [-89.522, 34.377],
     maxZoom: 22
   });
 
+  // Geocoder setup
   const geocoder = new MapboxGeocoder({
       accessToken: mapboxgl.accessToken,
       mapboxgl: mapboxgl,
@@ -106,14 +107,6 @@
       zoom: 16
   });
   map.addControl(geocoder, 'top-left');
-
-  const stringToColour = (str) => {
-    let hash = 0;
-    for (let i = 0; i < str.length; i++) { hash = str.charCodeAt(i) + ((hash << 5) - hash); }
-    let colour = '#';
-    for (let i = 0; i < 3; i++) { colour += ('00' + ((hash >> (i * 8)) & 0xFF).toString(16)).substr(-2); }
-    return colour;
-  }
 
   map.on('load', () => {
     // 1. Mapillary Source
@@ -125,26 +118,18 @@
     map.addLayer({ id: 'mapillary-lines', type: 'line', source: 'mapillary', 'source-layer': 'sequence', paint: { 'line-color': '#35af6d', 'line-width': 1.5, 'line-opacity': 0.6 } });
     map.addLayer({ id: 'mapillary-points', type: 'circle', source: 'mapillary', 'source-layer': 'image', paint: { 'circle-radius': ['interpolate', ['linear'], ['zoom'], 4, 1, 10, 2.5, 14, 6, 22, 18], 'circle-color': ['case', ['boolean', ['feature-state', 'selected'], false], '#ff9f43', '#35af6d'], 'circle-stroke-width': ['case', ['boolean', ['feature-state', 'selected'], false], 3, 1], 'circle-stroke-color': '#fff' } });
 
-    // 2. County Fills
-    fetch('./MSDOT/Mississippi_Counties.json').then(res => res.json()).then(data => {
-        data.features.forEach(f => { f.properties.dynamicColor = stringToColour(f.properties.Name || "default"); });
-        map.addSource('counties', { type: 'geojson', data: data });
-        map.addLayer({ id: 'county-fills', type: 'fill', source: 'counties', paint: { 'fill-color': ['get', 'dynamicColor'], 'fill-opacity': 0.15, 'fill-outline-color': '#000' } }, 'mapillary-lines');
-    });
-
-    // 3. Debris Points (Restored Path)
+    // 2. Debris Points (MSDOT Folder)
     fetch('./MSDOT/Debris_Points.json').then(res => res.json()).then(pointData => {
         pointData.features.forEach(f => { if (f.properties.Longitude && f.properties.Latitude) f.geometry = { type: 'Point', coordinates: [parseFloat(f.properties.Longitude), parseFloat(f.properties.Latitude)] }; });
         map.addSource('debris-points', { type: 'geojson', data: pointData });
         map.addLayer({ id: 'debris-layer', type: 'circle', source: 'debris-points', paint: { 'circle-radius': 7, 'circle-stroke-width': 2, 'circle-stroke-color': '#fff', 'circle-color': ['match', ['get', 'Debris Type'], 'Hanger', '#f1c40f', 'Leaner', '#e67e22', 'VEG', '#2ecc71', 'C&D', '#9b59b6', '#e74c3c'] } });
     });
 
-    // 4. Drone Photos (New Renamed Path in MSDOT folder)
+    // 3. Drone 360 Points (MSDOT Folder)
     map.addSource('drone-360', {
         type: 'geojson',
         data: './MSDOT/dronepoints.json'
     });
-
     map.addLayer({
         id: 'drone-layer',
         type: 'circle',
@@ -152,22 +137,29 @@
         paint: {
             'circle-radius': 9,
             'circle-color': '#00ffff',
-            'circle-stroke-width': 3,
+            'circle-stroke-width': 2,
             'circle-stroke-color': '#000'
         }
     });
-
+    
     applyDateFilter();
   });
 
+  // Mapillary Zoom Logic
   function zoomMapillary(delta) {
     currentZoom = Math.min(Math.max(currentZoom + delta, 0.5), 3.0);
     const frame = document.getElementById('mly-frame');
     frame.contentWindow.postMessage(JSON.stringify({type: 'mly.zoom', value: currentZoom}), 'https://www.mapillary.com');
   }
 
+  // Click Handlers
+  let selectedPointId = null;
   map.on('click', 'mapillary-points', (e) => {
-    currentImageKey = e.features[0].properties.id;
+    const feature = e.features[0];
+    currentImageKey = feature.properties.id;
+    if (selectedPointId !== null) map.setFeatureState({ source: 'mapillary', sourceLayer: 'image', id: selectedPointId }, { selected: false });
+    selectedPointId = feature.id;
+    map.setFeatureState({ source: 'mapillary', sourceLayer: 'image', id: selectedPointId }, { selected: true });
     document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${currentImageKey}&style=photo&menu=false&publish=true`;
   });
 
@@ -176,30 +168,26 @@
     new mapboxgl.Popup().setLngLat(e.lngLat).setHTML(`<strong>Type:</strong> ${props['Debris Type']}<br>Lat: ${props.Latitude}`).addTo(map);
   });
 
-  // Drone 360 Interaction
   map.on('click', 'drone-layer', (e) => {
     const props = e.features[0].properties;
-    const coordinates = e.features[0].geometry.coordinates.slice();
-    const photoUrl = props.Viewer_Link;
-
     new mapboxgl.Popup()
-        .setLngLat(coordinates)
+        .setLngLat(e.lngLat)
         .setHTML(`
             <div style="width:300px;">
-                <label style="font-weight:bold; color:#35af6d;">Drone Capture - ${props.DateTime || 'N/A'}</label>
+                <label style="font-weight:bold; color:#35af6d;">Drone Capture - ${props.DateTime || ''}</label>
                 <div id="pano-viewer"></div>
             </div>
         `)
         .addTo(map);
 
-    // Initialize 360 viewer in popup
     pannellum.viewer('pano-viewer', {
         "type": "equirectangular",
-        "panorama": photoUrl,
+        "panorama": props.Viewer_Link,
         "autoLoad": true
     });
   });
 
+  // Filters
   function applyDateFilter() {
     const fromVal = document.getElementById('date-from').value;
     const toVal = document.getElementById('date-to').value;
@@ -215,6 +203,29 @@
     map.setFilter('debris-layer', selectedType === 'All' ? null : ['==', ['get', 'Debris Type'], selectedType]);
   }
 
+  // Download Logic
+  async function downloadImage() {
+    if (!currentImageKey) { alert("Select a point first."); return; }
+    try {
+      const res = await fetch(`https://graph.mapillary.com/${currentImageKey}?fields=thumb_2048_url&access_token=${mlyToken}`);
+      const data = await res.json();
+      const imageUrl = data.thumb_2048_url;
+      if (imageUrl) {
+        const imageRes = await fetch(imageUrl);
+        const blob = await imageRes.blob();
+        const url = window.URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = `Debris_View_${currentImageKey}.jpg`;
+        document.body.appendChild(a);
+        a.click();
+        a.remove();
+        window.URL.revokeObjectURL(url);
+      }
+    } catch (err) { alert("Security block. Right-click image in viewer to save."); }
+  }
+
+  // Hovers
   const layerIds = ['mapillary-points', 'debris-layer', 'drone-layer'];
   layerIds.forEach(id => {
     map.on('mouseenter', id, () => { map.getCanvas().style.cursor = 'pointer'; });
